apps/oxlint/src/snapshots/fixtures__suppression__eslint_file_format_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/suppression/eslint_file_format
----------

  x There are new violations not covered by the suppressions file.
  help: Run `oxlint --suppress-all` to update the suppressions file.

  x eslint(no-console): Unexpected console statement.
   ,-[test.js:1:1]
 1 | console.log();
   : ^^^^^^^^^^^
 2 | console.log();
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[test.js:2:1]
 1 | console.log();
 2 | console.log();
   : ^^^^^^^^^^^
 3 | console.log();
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[test.js:3:1]
 2 | console.log();
 3 | console.log();
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

Found 0 warnings and 4 errors.
Finished in <variable>ms on 1 file with 59 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
