apps/oxlint/src/snapshots/fixtures__suppression__prune_errors_warning_--type-aware --type-check@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware --type-check
working directory: fixtures/suppression/prune_errors_warning
----------

  x The number of 'eslint/no-console' errors in folder_b/test.ts decreased from 3 to 1.
  help: Update `oxlint-suppressions.json` file running `oxlint --prune-suppressions`

  x The 'typescript-eslint/await-thenable' rule has been pruned from folder_b/test.ts.
  help: Update `oxlint-suppressions.json` file running `oxlint --prune-suppressions`

  x typescript(TS2322): Type 'string' is not assignable to type 'number'.
   ,-[folder_b/test.ts:1:7]
 1 | const foo: number = "42";
   :       ^^^
 2 | 
   `----

  x typescript(TS2584): Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
   ,-[folder_b/test.ts:4:3]
 3 | async function none() {
 4 |   console.log();
   :   ^^^^^^^
 5 | }
   `----

Found 0 warnings and 4 errors.
Finished in <variable>ms on 2 files with 83 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
